unpackaged/main/default/objects/WeightedAveragePurchasePrice__c/WeightedAveragePurchasePrice__c.object-meta.xml
<CustomObject>
    <label>Weighted Average Purchase Price</label>
    <nameField>
        <displayFormat>WAPP-{0000}</displayFormat>
        <label>Weighted Average Purchase Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weighted Average Purchase Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>