unpackaged/main/default/objects/WeightedAveragePurchasePrice__c/fields/LastUploadDate__c.field-meta.xml
<CustomField>
    <fullName>LastUploadDate__c</fullName>
    <description>Last modification of the price by the interface between SOM and CEGID</description>
    <label>Last Upload Date</label>
    <type>DateTime</type>
</CustomField>