unpackaged/main/default/objects/WeightedAveragePurchasePrice__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location when the weighted average price is defined</description>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Weighted Average Purchase Prices</relationshipLabel>
    <relationshipName>Weighted_Average_Purchase_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>