unpackaged/main/default/objects/WeightedAveragePurchasePrice__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>SKU from CEGID</description>
    <label>SKU</label>
    <length>25</length>
    <type>Text</type>
</CustomField>