unpackaged/main/default/objects/WeightedAveragePurchasePrice__c/fields/WAPP__c.field-meta.xml
<CustomField>
    <fullName>WAPP__c</fullName>
    <description>Price from CEGID</description>
    <label>WAPP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>