unpackaged/main/default/objects/WeightedAveragePurchasePrice__c/listViews/SKU_and_WAPP.listView-meta.xml
<ListView>
    <fullName>SKU_and_WAPP</fullName>
    <columns>SKU__c</columns>
    <columns>Location__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>WAPP__c</columns>
    <columns>LastUploadDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>SKU and WAPP</label>
</ListView>